[package]
name = "pbs"
version = "0.0.3"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Will-Shanks/pbs-rs"
description = "Safe FFI for PBSPro HPC job scheduler"
keywords = ["pbs", "hpc"]

[dependencies]
bindgen = { version = "0.63", optional = true }
libc = "0.2"
linked_list_c = "0.1"
clap = { version = "4.0", features = ["derive"], optional = true}
log = "0.4"

[build-dependencies]
bindgen = { version = "0.63", optional = true }
