[package]
name = "pbs"
version = "0.0.3"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Will-Shanks/pbs-rs"
description = "Safe FFI for OpenPBS and PBSPro HPC job scheduler"
keywords = ["pbs", "hpc"]

[dependencies]
pbs-sys = { path = "../pbs_sys", features=["static"] }
libc = "0.2"
linked_list_c = { path = "../linked_list_c-rs" }
clap = { version = "4.0", features = ["derive"], optional = true}
log = "0.4"
regex = { version = "1", optional = true}
