[package]
name = "pbs"
version = "0.0.4"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Will-Shanks/pbs-rs"
description = "Safe FFI for OpenPBS and PBSPro HPC job scheduler"
keywords = ["pbs", "hpc"]

[dependencies]
pbs-sys = { version = "0.0.2", features=["static"] }
libc = "0.2"
linked_list_c = "0.1.2"
log = "0.4"
regex = "1"
serde_json = "1"
